# PyZBC2014

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  pyzbc2014.py  setup.py  test.py
.github/workflows/: build.yml  build_and_publish.yml  build_wheels.yml  publish.yml
model/: compile.sh  model_IHC.c  model_Synapse.c
pyzbc2014/: __init__.py  pyzbc2014.py
pyzbc2014/model/: model_IHC.c  model_Synapse.c  stubmodule.c
src/pyzbc2014/: __init__.py  pyzbc2014.py
src/pyzbc2014/_lib/: dummy.c
src/pyzbc2014/model/: complex.c  stub.py
tests/: test.py
