[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project] 
name = "pyzbc2014"
dynamic = ["version"] # version is set dynamically, not as a string
authors = [
  { name = "Daniel Guest", email = "daniel_guest@urmc.rochester.edu" },
  { name = "Thomas Stoll", email = "tomstoll@med.umich.edu" }
]
readme = "README.md"
dependencies = [
  "numpy>=1.21.0",
  "scipy>=1.7.0"
]

[tool.setuptools.dynamic]
version = {attr = "pyzbc2014.__version__"}