[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project] 
name = "pyzbc2014"
dynamic = ["version"] # version is set dynamically, not as a string
authors = [
  { name = "Daniel Guest", email = "daniel_guest@urmc.rochester.edu" },
  { name = "Thomas Stoll", email = "tomstoll@med.umich.edu" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.21.0",
  "scipy>=1.7.0"
]
license = {file = "LICENSE"}
keywords = ["auditory", "nerve", "model", "zilany", "bruce", "carney", "2014"]

[tool.setuptools.dynamic]
version = {attr = "pyzbc2014.__version__"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["pyzbc2014*", "pyzbc2014.model*"]